--- a/src/explore.es.ipynb
+++ b/src/explore.es.ipynb
@@ -531,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -591,6 +591,18 @@
       "48  September 30, 2012   50.10M\n",
       "49       June 30, 2012   26.65M\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Date     object\n",
+       "Value    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -649,7 +661,100 @@
     "df = pd.DataFrame(data, columns=headers)\n",
     "\n",
     "# Muestra el DataFrame resultante\n",
-    "print(df)"
+    "print(df)\n",
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                  Date         Value\n",
+      "0   September 30, 2024  2.518000e+10\n",
+      "1        June 30, 2024  2.550000e+10\n",
+      "2       March 31, 2024  2.130000e+10\n",
+      "3    December 31, 2023  2.517000e+10\n",
+      "4   September 30, 2023  2.335000e+10\n",
+      "5        June 30, 2023  2.493000e+10\n",
+      "6       March 31, 2023  2.333000e+10\n",
+      "7    December 31, 2022  2.432000e+10\n",
+      "8   September 30, 2022  2.145000e+10\n",
+      "9        June 30, 2022  1.693000e+10\n",
+      "10      March 31, 2022  1.876000e+10\n",
+      "11   December 31, 2021  1.772000e+10\n",
+      "12  September 30, 2021  1.376000e+10\n",
+      "13       June 30, 2021  1.196000e+10\n",
+      "14      March 31, 2021  1.039000e+10\n",
+      "15   December 31, 2020  1.074000e+10\n",
+      "16  September 30, 2020  8.771000e+09\n",
+      "17       June 30, 2020  6.036000e+09\n",
+      "18      March 31, 2020  5.985000e+09\n",
+      "19   December 31, 2019  7.384000e+09\n",
+      "20  September 30, 2019  6.303000e+09\n",
+      "21       June 30, 2019  6.350000e+09\n",
+      "22      March 31, 2019  4.541000e+09\n",
+      "23   December 31, 2018  7.226000e+09\n",
+      "24  September 30, 2018  6.824000e+09\n",
+      "25       June 30, 2018  4.002000e+09\n",
+      "26      March 31, 2018  3.409000e+09\n",
+      "27   December 31, 2017  3.288000e+09\n",
+      "28  September 30, 2017  2.985000e+09\n",
+      "29       June 30, 2017  2.790000e+09\n",
+      "30      March 31, 2017  2.696000e+09\n",
+      "31   December 31, 2016  2.285000e+09\n",
+      "32  September 30, 2016  2.298000e+09\n",
+      "33       June 30, 2016  1.270000e+09\n",
+      "34      March 31, 2016  1.147000e+09\n",
+      "35   December 31, 2015  1.214000e+09\n",
+      "36  September 30, 2015  9.367900e+08\n",
+      "37       June 30, 2015  9.549800e+08\n",
+      "38      March 31, 2015  9.398800e+08\n",
+      "39   December 31, 2014  9.566600e+08\n",
+      "40  September 30, 2014  8.518000e+08\n",
+      "41       June 30, 2014  7.693500e+08\n",
+      "42      March 31, 2014  6.205400e+08\n",
+      "43   December 31, 2013  6.152200e+08\n",
+      "44  September 30, 2013  4.313500e+08\n",
+      "45       June 30, 2013  4.051400e+08\n",
+      "46      March 31, 2013  5.617900e+08\n",
+      "47   December 31, 2012  3.063300e+08\n",
+      "48  September 30, 2012  5.010000e+07\n",
+      "49       June 30, 2012  2.665000e+07\n",
+      "Date      object\n",
+      "Value    float64\n",
+      "dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "# Definimos una función para convertir a numérico\n",
+    "def convert_to_numeric(value):\n",
+    "    # Si el valor contiene 'B', multiplicamos por mil millones (billones)\n",
+    "    if 'B' in value:\n",
+    "        return float(value.replace('B', '').replace(',', '').strip()) * 1e9\n",
+    "    # Si el valor contiene 'M', multiplicamos por un millón\n",
+    "    elif 'M' in value:\n",
+    "        return float(value.replace('M', '').replace(',', '').strip()) * 1e6\n",
+    "    else:\n",
+    "        # En caso de que ya sea un valor numérico sin letras\n",
+    "        return float(value.replace(',', '').strip())\n",
+    "\n",
+    "# Aplicamos la función a la columna 'value' (ajusta el nombre si es diferente)\n",
+    "#df['Value'] = df['Value'].apply(convert_to_numeric)\n",
+    "\n",
+    "# Redondea la columna 'value' a tres decimales\n",
+    "df['Value'] = df['Value'].round(3)\n",
+    "\n",
+    "# Verificamos el resultado\n",
+    "print(df)\n",
+    "print(df.dtypes)"
    ]
   }
  ],
